--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.0.2",
+    "axios": "^0.21.4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-data-table-component": "^7.1.0",
