--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@prisma/client": "^3.0.2",
+    "@react-pdf/renderer": "^2.0.19",
     "axios": "^0.21.4",
+    "moment": "^2.29.1",
     "next": "11.1.2",
+    "nodemailer": "^6.6.3",
     "react": "17.0.2",
+    "react-chartjs-2": "^3.0.5",
     "react-data-table-component": "^7.1.0",
     "react-dom": "17.0.2"
   },
