--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^3.0.2",
     "@react-pdf/renderer": "^2.0.19",
     "axios": "^0.21.4",
+    "chart.js": "^3.5.1",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "next": "11.1.2",
